--- a/compose.yaml
+++ b/compose.yaml
@@ -1,4 +1,3 @@
-version: "3.8"
 services:
   bl01t-ea-test-01:
     image: "ghcr.io/epics-containers/ioc-adsimdetector-runtime:2024.6.1"
@@ -7,6 +6,8 @@ services:
       - opi:/epics/opi
     networks:
       - channel-access
+    tty: true
+    stdin_open: true
   bl01t-di-cam-01:
     image: "ghcr.io/epics-containers/ioc-adsimdetector-runtime:2024.6.1"
     networks:
@@ -14,6 +15,8 @@ services:
     volumes:
       - ./services/bl01t-di-cam-01/config:/epics/ioc/config
       - opi:/epics/opi
+    tty: true
+    stdin_open: true
   epics-opis:
     image: "nginx:1.25.4"
     networks:
@@ -28,6 +31,9 @@ services:
       - /tmp/.X11-unix:/tmp/.X11-unix
       - ~/.Xauthority:/root/.Xauthority
       - opi:/opi
+    # for X11 to work we need to run as the same UID as the host
+    # IMPORTANT: these environment variables must be exported before compose up
+    user: ${UID}:${GID}
     network_mode: "host"
 volumes:
   opi:
