--- a/compose.yaml
+++ b/compose.yaml
@@ -3,9 +3,25 @@ services:
     image: "ghcr.io/epics-containers/ioc-adsimdetector-runtime:2024.6.1"
     volumes:
       - ./services/bl01t-ea-test-01/config:/epics/ioc/config
-      - opi:/epics/opi
+      - type: volume
+        source: opi
+        target: /epics/opi
+        volume:
+          subpath: bl01t-di-test-01
     networks:
       - channel-access
+    tty: true
+    stdin_open: true
+  bl01t-ea-test-02:
+    image: "ghcr.io/epics-containers/ioc-adsimdetector-runtime:2024.6.1"
+    volumes:
+      - ./services/bl01t-ea-test-01/config:/epics/ioc/config
+      - type: volume
+        source: opi
+        target: /epics/opi
+        volume:
+          subpath: bl01t-di-test-02
+    network_mode: "host"
     tty: true
     stdin_open: true
   bl01t-di-cam-01:
@@ -14,7 +30,11 @@ services:
       - channel-access
     volumes:
       - ./services/bl01t-di-cam-01/config:/epics/ioc/config
-      - opi:/epics/opi
+      - type: volume
+        source: opi
+        target: /epics/opi
+        volume:
+          subpath: bl01t-di-cam-01
     tty: true
     stdin_open: true
   epics-opis:
@@ -27,13 +47,16 @@ services:
     image: "ghcr.io/epics-containers/ec-phoebus:latest"
     environment:
       DISPLAY: $DISPLAY
+    tty: true
+    command: phoebus-product/phoebus.sh -resource /opi/index.bob
     volumes:
       - /tmp/.X11-unix:/tmp/.X11-unix
       - ~/.Xauthority:/root/.Xauthority
       - opi:/opi
     # for X11 to work we need to run as the same UID as the host
-    # IMPORTANT: these environment variables must be exported before compose up
-    user: ${UID}:${GID}
+    # IMPORTANT: set UIDGID to your host user:group e.g. 1000:1000
+    # BUT: always to 0:0 if you are using podman
+    user: ${UIDGID}
     network_mode: "host"
 volumes:
   opi:
