--- a/compose.yaml
+++ b/compose.yaml
@@ -30,11 +30,9 @@ services:
       - channel-access
     volumes:
       - ./services/bl01t-di-cam-01/config:/epics/ioc/config
-      - type: volume
-        source: opi
-        target: /epics/opi
-        volume:
-          subpath: bl01t-di-cam-01
+      - type: bind
+        source: ./opi/bl01t-di-cam-01
+        target: /epics/opi/
     tty: true
     stdin_open: true
   epics-opis:
@@ -48,11 +46,11 @@ services:
     environment:
       DISPLAY: $DISPLAY
     tty: true
-    command: phoebus-product/phoebus.sh -resource /opi/index.bob
+    command: phoebus-product/phoebus.sh -resource /opi/bl01t-di-cam-01/index.bob
     volumes:
       - /tmp/.X11-unix:/tmp/.X11-unix
       - ~/.Xauthority:/root/.Xauthority
-      - opi:/opi
+      - ./opi:/opi
     # for X11 to work we need to run as the same UID as the host
     # IMPORTANT: set UIDGID to your host user:group e.g. 1000:1000
     # BUT: always to 0:0 if you are using podman
