pre adding gateway

--- a/compose.yaml
+++ b/compose.yaml
@@ -31,7 +31,7 @@ services:
     tty: true
     stdin_open: true
   epics-opis:
-    image: "nginx:1.25.4"
+    image: nginx:1.27
     networks:
       - channel_access
     volumes:
@@ -52,7 +52,7 @@ services:
     user: ${UIDGID}
     networks:
       - channel_access
-    #network_mode: "host"
+    # network_mode: "host"
 volumes:
   opi:
 networks:
