--- a/compose.yaml
+++ b/compose.yaml
@@ -2,25 +2,6 @@
 
 services:
 
-  bl01t-ea-test-01:
-    image: ghcr.io/epics-containers/ioc-adsimdetector-runtime:2024.6.1
-    volumes:
-      - ./services/bl01t-ea-test-01/config:/epics/ioc/config
-      - opi:/epics/opi/
-    tty: true
-    stdin_open: true
-    networks:
-      - channel_access
-
-  bl01t-di-cam-01:
-    image: ghcr.io/epics-containers/ioc-adsimdetector-runtime:2024.6.1
-    volumes:
-      - ./services/bl01t-di-cam-01/config:/epics/ioc/config
-      - opi:/epics/opi/
-    tty: true
-    stdin_open: true
-    network_mode: service:bl01t-ea-test-01
-
   epics-opis:
     image: docker.io/nginx:1.27
     networks:
@@ -42,16 +23,9 @@ services:
     # IMPORTANT: set UIDGID to your host user:group e.g. 1000:1000
     # BUT: always to 0:0 if you are using podman
     user: ${UIDGID}
-    # X11 forwarding works without net host - just not at DLS for some reason
-    # network_mode: "host"
-    network_mode: service:bl01t-ea-test-01
+    network_mode: "host"
 
-volumes:
-  opi:
+include:
+  - services/bl01t-di-cam-01/compose.yml
+  - services/bl01t-ea-test-01/compose.yml
 
-networks:
-  channel_access:
-    ipam:
-      driver: default
-      config:
-        - subnet: "172.20.0.0/16"
