--- a/services/bl01t-ea-test-01/compose.yml
+++ b/services/bl01t-ea-test-01/compose.yml
@@ -1,9 +1,23 @@
 services:
+
   bl01t-ea-test-01:
+
     extends:
-      service: ioc
+      service: linux_ioc
       file: ../../include/ioc.yml
+
     image: ghcr.io/epics-containers/ioc-adsimdetector-runtime:2024.6.1
+
+    labels:
+      # this should be incremented when changes are made to this file
+      # (TODO: can we enforce/automate this?)
+      version: 0.1.0
+
+    environment:
+      IOCSH_PS1: bl01t-ea-test-01 >
+      IOC_NAME: bl01t-ea-test-01
+      IOC_PREFIX: BL01T-EA-TEST-01
+
     volumes:
       - ./config:/epics/ioc/config
       # TODO can we create the subfolders with an init container?
