--- a/compose.yaml
+++ b/compose.yaml
@@ -1,13 +1,15 @@
-# the top level compose file represents a set of IOCs that would be deployed
+# The top level compose file represents a set of IOCs that would be deployed
 # to a given IOC server
 #
-# For the example this is a single compose file. However, if you wanted to keep
+# For this example we have a single compose file. However, if you wanted to keep
 # all IOCs for a beamline in a single repo but deploy to multiple servers,
 # then each server would have its own named compose file
 
-# to deploy IOCs to the local machine clone this repo and use the following:
-#  export COMPOSE_PROFILES=deploy
-#  docker compose up --detach
+# to deploy IOCs to the local machine, clone this repo and run the following
+# command from the repo root:
+#  docker compose --profile deploy up --detach
+# or for a multiple server repo:
+#  docker compose --profile deploy -f my_server_01.yml up --detach
 
 include:
   # all profiles
