--- a/services/bl01t-ea-test-01/compose.yml
+++ b/services/bl01t-ea-test-01/compose.yml
@@ -18,15 +18,13 @@ services:
       IOC_NAME: bl01t-ea-test-01
       IOC_PREFIX: BL01T-EA-TEST-01
 
-    volumes:
-      - ./config:/epics/ioc/config
-      # TODO can we create the subfolders with an init container?
-      # - type: volume
-      #   source: opi
-      #   target: /epics/opi
-      #   volume:
-      #     nocopy: true
-      #     subpath: bl01t-ea-test-01
+    configs:
+      - source: bl01t-ea-test-01_config
+        target: epics/ioc/config
+
+configs:
+  bl01t-ea-test-01_config:
+    file: ./config
 
 include:
   - include/networks.yml
