--- a/services/phoebus/compose.yml
+++ b/services/phoebus/compose.yml
@@ -16,7 +16,8 @@ services:
     # IMPORTANT: set UIDGID to your host user:group e.g. 1000:1000
     # BUT: always to 0:0 if you are using podman
     user: ${UIDGID}
-    network_mode: "host"
+    networks:
+      - channel_access
 
     profiles:
       - develop
