add opi_auto volume
as a workaround to podman's inability to use sub_path volume
mounts

see https://github.com/containers/podman/issues/20661

--- a/services/bl01t-ea-test-01/compose.yml
+++ b/services/bl01t-ea-test-01/compose.yml
@@ -20,7 +20,7 @@ services:
 
     volumes:
       - type: volume
-        source: opi
+        source: opi_auto
         target: /epics/opi
         volume:
           subpath: bl01t-ea-test-01
