--- a/services/bl01t-ea-test-01/compose.yml
+++ b/services/bl01t-ea-test-01/compose.yml
@@ -14,19 +14,19 @@ services:
       version: 0.1.0
 
     environment:
-      IOCSH_PS1: ${IOC_NAME} >
-      IOC_NAME: ${IOC_NAME}
-      IOC_PREFIX: ${IOC_PREFIX}
+      IOCSH_PS1: bl01t-ea-test-01 >
+      IOC_NAME: bl01t-ea-test-01
+      IOC_PREFIX: BL01T-EA-TEST-01
 
     volumes:
       - type: volume
         source: opi_auto
         target: /epics/opi
         volume:
-          subpath: ${IOC_NAME}
+          subpath: bl01t-ea-test-01
 
     configs:
-      - source: ${IOC_NAME}_config
+      - source: bl01t-ea-test-01_config
         target: epics/ioc/config
 
 configs:
