--- a/include/init.yml
+++ b/include/init.yml
@@ -1,19 +1,15 @@
 # A basic init service that sets up volumes for the IOCs described in
 # this repo.
-#
-# At present this is just making sure the opi volume has a subfolder for
-# each service and copies in any hand coded opis to those folders.
 
 services:
-
   init_iocs:
-
     image: docker.io/busybox
 
     command: |
       sh /repo/include/init.sh
 
     volumes:
-      - opi:/opi/
-      - opi_auto:/opi_auto/
+      # mount the runtime opi folder
+      - ../services/opi:/opi/
+      # mount the repo to copy hand coded opis into runtime opi
       - ..:/repo
