--- a/services/bl01t-di-cam-01/compose.yml
+++ b/services/bl01t-di-cam-01/compose.yml
@@ -19,11 +19,7 @@ services:
       IOC_PREFIX: BL01T-DI-CAM-01
 
     volumes:
-      - type: volume
-        source: opi_auto
-        target: /epics/opi
-        volume:
-          subpath: bl01t-di-cam-01
+      - ../opi/bl01t-di-cam-01:/epics/opi
 
     configs:
       - source: bl01t-di-cam-01_config
