--- a/compose.yaml
+++ b/compose.yaml
@@ -11,10 +11,10 @@
 # or for a multiple server repo:
 #  docker compose --profile deploy -f my_server_01.yml up --detach
 
-include:
-  # initialise volumes
-  - include/init.yml
+# to deploy the IOCs to a workstation for testing and development, use:
+# docker compose up --detach
 
+include:
   # all profiles
   - services/bl01t-ea-test-01/compose.yml
   - services/bl01t-di-cam-01/compose.yml
