--- a/services/bl01t-di-cam-01/compose.yml
+++ b/services/bl01t-di-cam-01/compose.yml
@@ -9,8 +9,6 @@ services:
     image: ghcr.io/epics-containers/ioc-adsimdetector-runtime:2024.6.1
 
     labels:
-      # this should be incremented when changes are made to this file
-      # (TODO: can we enforce/automate this?)
       version: 0.1.0
 
     environment:
@@ -19,7 +17,7 @@ services:
       IOC_PREFIX: BL01T-DI-CAM-01
 
     volumes:
-      - ../opi/bl01t-di-cam-01:/epics/opi
+      - ../../opi/iocs/bl01t-di-cam-01:/epics/opi
 
     configs:
       - source: bl01t-di-cam-01_config
@@ -30,5 +28,5 @@ configs:
     file: ./config
 
 include:
-  - include/networks.yml
-  - include/volumes.yml
+  - path:
+    - include/networks.yml
