--- a/services/bl01t-ea-test-01/compose.yml
+++ b/services/bl01t-ea-test-01/compose.yml
@@ -17,7 +17,7 @@ services:
       IOC_PREFIX: BL01T-EA-TEST-01
 
     volumes:
-      - ../opi/bl01t-ea-test-01:/epics/opi
+      - ../../opi/iocs/bl01t-ea-test-01:/epics/opi
 
     configs:
       - source: bl01t-ea-test-01_config
@@ -28,5 +28,5 @@ configs:
     file: ./config
 
 include:
-  - include/networks.yml
-  - include/volumes.yml
+  - path:
+      include/networks.yml
