--- a/services/phoebus/compose.yml
+++ b/services/phoebus/compose.yml
@@ -3,7 +3,7 @@
 
 services:
   phoebus:
-    image: ghcr.io/epics-containers/ec-phoebus:latest
+    image: ghcr.io/epics-containers/ec-phoebus:4.7.3ec2
     environment:
       DISPLAY: $DISPLAY
     tty: true
