--- a/services/pvagw/config/pvagw.config
+++ b/services/pvagw/config/pvagw.config
@@ -22,8 +22,8 @@
         {
             "name":"theserver",
             "clients":["theclient"],
-            "interface":["127.0.0.1"],
-            "addrlist":"127.255.255.255",
+            /* "interface":["127.0.0.1"], */
+            /* "addrlist":"127.255.255.255", */
             "autoaddrlist":false,
             "serverport":5075,
             "bcastport":5076,
