--- a/services/pvagw/compose.yml
+++ b/services/pvagw/compose.yml
@@ -6,7 +6,7 @@ services:
 
   pvagw-develop: &pvagw
 
-    image: ghcr.io/epics-containers/ec-p4p-debug:latest
+    image: ghcr.io/epics-containers/ec-p4p:4.1.12ec1
 
     expose:
       - 5076/udp
