--- a/services/bl01t-di-cam-01/compose.yml
+++ b/services/bl01t-di-cam-01/compose.yml
@@ -6,7 +6,7 @@ services:
       service: linux_ioc
       file: ../../include/ioc.yml
 
-    image: ghcr.io/epics-containers/ioc-adsimdetector-runtime:2024.6.1
+    image: ghcr.io/epics-containers/ioc-adsimdetector-runtime:2024.7.2b2
 
     labels:
       version: 0.1.0
@@ -18,6 +18,8 @@ services:
 
     volumes:
       - ../../opi/iocs/bl01t-di-cam-01:/epics/opi
+
+    command: /epics/ioc/start.sh
 
     configs:
       - source: bl01t-di-cam-01_config
